[package]
name = "treehacks25"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
axum-server = "0.7.1"
jsonwebtoken = "9.3.1"
serde = "1.0.217"
chrono = "0.4.39"
base64 = "0.22.1"
