[package]
name = "github"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["tracing"] }
hyper = "1.0.0"
axum-server = "0.7.1"
jsonwebtoken = "9.3.1"
hmac-sha256 = "1.1.8"
time = "0.3.37"
